<resources>
    <string name="app_name">Cafeyab</string>

    <string name="action_search">جستجو</string>

    <string name="title_home">خانه</string>
    <string name="title_cafe">کافه ها</string>
    <string name="title_news">مطالب</string>
    <string name="title_event">رویداد ها</string>
    <string name="title_video">ویدیو ها</string>
    <string name="title_map">نقشه</string>
    <string name="title_city">انتخاب شهر</string>
    <string name="title_user">کاربر</string>
    <string name="title_about">درباره ما</string>

    <string name="activity_main">کافه یاب</string>
    <string name="activity_about">درباره کافه یاب</string>
    <string name="activity_cafe_list">فهرست کافه ها</string>
    <string name="activity_news_list">فهرست مطالب</string>
    <string name="activity_event_list">فهرست رویداد ها</string>
    <string name="activity_video_list">فهرست ویدیو ها</string>
    <string name="activity_map_list">کافه‌های اطراف بر روی نقشه</string>
    <string name="activity_search">جستجو</string>
    <string name="activity_user">کاربر</string>

    <string name="activity_event_single">اطلاعات رویداد</string>
    <string name="activity_video_single">اطلاعات ویدیو</string>
    <string name="activity_cafe_single">اطلاعات کافه</string>
    <string name="activity_news_single">اطلاعات مطلب</string>

    <string name="backdrop_title">کافه یاب</string>
    <string name="backdrop_subtitle">فهرست کافه‌های شهر های مختلف ایران</string>
    <string name="backdrop_search">جستجوی کافه یا منطقه ...</string>

    <string name="connection_error">دسترسی به اینترنت برقرار نیست !</string>
    <string name="connection_retry">بررسی</string>

    <string name="filter_title">جستجوی کافه</string>
    <string name="filter_map_list">کافه‌هاروی نقشه</string>
    <string name="filter_name">نام کافه</string>
    <string name="filter_city">انتخاب شهر</string>
    <string name="filter_recommended">کافه‌های پیشنهادی</string>
    <string name="filter_no_smoking">بدون سیگار</string>
    <string name="filter_breakfast">صبحانه</string>
    <string name="filter_food">غذا</string>
    <string name="filter_vegetarianـfood">غذای گیاهی</string>
    <string name="filter_wifi">اینترنت</string>
    <!-- <string name="filter_third_wave_coffee">قهوه نسل سوم</string>
    <string name="filter_takea_way">بیرون بر</string>
    <string name="filter_gallery">گالری</string>
    <string name="filter_tv">تلویزیون</string>
    <string name="filter_family">خانوادی</string> -->
    <string name="filter_button">جستجو</string>

    <!-- Strings related to login -->
    <string name="prompt_email">ایمیل</string>
    <string name="prompt_password">پسورد</string>
    <string name="action_sign_in">ورود</string>
    <string name="action_sign_in_short">ورود</string>
    <string name="error_invalid_email">آدرس ایمیل وارد شده نامعتبر است</string>
    <string name="error_invalid_password">پسورد بیش از اندازه کوتاه است</string>
    <string name="error_incorrect_password">پسورد وارد شده صحیح نیست</string>
    <string name="error_field_required">این فیلد باید تکمیل شود</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_share">Share</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>










    <string name="attribute_workingHour">ساعت کار</string>
    <string name="attribute_parkingSpace">جای پارک</string>
    <string name="attribute_wifi">اینترنت</string>
    <string name="attribute_music">موزیک</string>
    <string name="attribute_toilet">سرویس بهداشتی</string>
    <string name="attribute_cardReader">دستگاه کارت‌خوان</string>
    <string name="attribute_breakfast">صبحانه</string>
    <string name="attribute_food">غذا</string>
    <string name="attribute_outdoor">فضای باز</string>
    <string name="attribute_booking">رزرو میز</string>
    <string name="attribute_takeAway">بیرون‌بر</string>
    <string name="attribute_suitableGroups">مناسب برای قرار گروهی</string>
    <string name="attribute_suitableChildren">مناسب برای کودکان</string>
    <string name="attribute_suitableDisabled">مناسب برای معلولین</string>
    <string name="attribute_gallery">گالری</string>
    <string name="attribute_tv">تلویزیون</string>
    <string name="attribute_delivery">دلیوری</string>
    <string name="attribute_serviceCosts">حق سرویس</string>
    <string name="attribute_selfService">سلف‌سرویس</string>
    <string name="attribute_cafeTunes">انتخاب موزیک(کافه‌تونز)</string>
    <string name="attribute_feelinger">سیستم نظرسنجی</string>
    <string name="attribute_capacity">ظرفیت</string>
    <string name="attribute_shop">فروشگاه</string>
    <string name="attribute_timeLimit">محدودیت زمانی</string>
    <string name="attribute_routingMetro">مترو</string>
    <string name="attribute_routingBus">اتوبوس</string>
    <string name="attribute_routingTaxi">تاکسی</string>
    <string name="attribute_pros">بهترین‌ها</string>
    <string name="attribute_thirdwaveCoffee">نسل سوم قهوه</string>
    <string name="attribute_videoprojector">ویدیو پروژکتور</string>
    <string name="attribute_vip">فضای ویژه VIP</string>
    <string name="attribute_suitableforcouples">مناسب برای قرار دو نفره</string>
    <string name="attribute_suitableFamily">مناسب برای خانواده</string>
    <string name="address">آدرس</string>
    <string name="phone">تلفن</string>
    <string name="cafe_map">محل کافه بر روی نقشه</string>

    <string name="listTitle1">اطلاعات مکان</string>
    <string name="listTitle2">ساعت کار</string>
    <string name="listTitle3">امکانات</string>
    <string name="listTitle4">مسیریابی</string>

</resources>
